# psychopy-conflict-task

./: .env  .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  requirements.txt  tasks.py
conflict-task/: base.py
conflict-task/src/: experiment.py  window.py
conflict_task/: alternator.py  base.py  component.py  constants.py  experiment.py  trial.py  util.py
conflict_task/Randomizer/: counterbalancer.py  randomizer.py  second_try.py  third_try.py  translator.py
conflict_task/component/: _base_component.py  audio_component.py  response_component.py  visual_component.py  wait_component.py
conflict_task/devices/: __init__.py  data_handler.py  input_device.py  window.py
conflict_task/experiment/: __init__.py  component.py  experiment.py  trial.py  util.py
conflict_task/sequence/: _base_sequence.py  feedback.py  screen.py  sequence.py  trial.py
conflict_task/util/: __init__.py  counterbalancing.py
docs/source/: conf.py  index.rst
examples/Anti-Foveal Simon Task (AFST)/: afst_task.py  sequence_creator.py
examples/Flanker Task/: flanker_task.py  sequence_creator.py
examples/Prime-Probe Task/: prime_probe.py  prime_probe2.py  trial_values.py
examples/prime-probe/: prime-probe.py  sequence_creator.py
sequencing_helpers/: util.py
src/conflict_task/: block.py  block_experiment.py  constants.py  experiment.py  instructions.py  preview.py
src/sequencing_helpers/: __init__.py  counterbalancing.py  util.py
tests/: manual_tests.py
tests/component/: response_test.py
tests/fixtures/: __init__.py  component.py  devices.py  sequence.py
(+74 files in other folders)
