[tool.poetry]
name = "conflict_task"
version = "1.0.0"
description = ""
authors = ["Hafsteinn Ragnarsson <haffi921@gmail.com>"]
license = "GPL-3.0-only"
packages = [
    { include = "conflict_task", from = "src"},
    { include = "sequencing_helpers", from = "src"}
]

[tool.poetry.dependencies]
python = "3.8.10"
PsychoPy = "^2021.2.3"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
pytest = "^6.2.5"
poethepoet = "^0.10.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.isort]
profile = "black"

[tool.poe.tasks]
clean = { shell = "rm -rf ./data" }
test = "pytest ."
retest = "pytest . --lf"
mtest = "pytest tests/manual_tests/*"
isort = "isort ."
style = "black ."
format = ["isort", "style"]
